fixed logo alignment on mobile

--- a/themes/lucasjk/source/css/_base.scss
+++ b/themes/lucasjk/source/css/_base.scss
@@ -31,7 +31,14 @@ form {
   @include landscape-tablet {
     display: flex;
   }
+
+  @include wide-desktop {
+    max-width: 1600px;
+    margin:0 auto;
+  }
 }
+
+
 
 
 .main-content {
