--- a/themes/lucasjk/source/css/_header-bar.scss
+++ b/themes/lucasjk/source/css/_header-bar.scss
@@ -1,13 +1,12 @@
 
 .header-bar {
   width:50%;
-  margin:em(18) auto;
+  margin:0 auto;
   margin-bottom: em(18);
 
 }
 
   .header-bar__logo-wrap {
-    width:40%;
     margin:0 auto;
   }
 
