--- a/themes/lucasjk/source/css/_variables.scss
+++ b/themes/lucasjk/source/css/_variables.scss
@@ -8,7 +8,7 @@ $grey-dark: #3d3d3d;
 $off-white: #ededed;
 $white: #f9f9f9;
 $link-color: #ffe630;
-$thumbnail-overlay-color: rgba(25,29,33, 0.4);
+$thumbnail-overlay-color: rgba(25,29,33, 0.2);
 
 //Default font size for the em function:
 $browser-context: 16;
